Added new musics

--- a/index.html
+++ b/index.html
@@ -475,6 +475,42 @@
                 </div>
             </div>
 
+            <div class="row border-bottom py-5 border-dark videos-text">
+                <div class="col-md-3 text-center font-weight-bolder font-italic mb-3">
+                    Furkan Aysal & İbrahim Öztürk
+                </div>
+                <div class="col-md-3 text-center font-italic mb-3">
+                    Dilemma (Official Audio)
+                </div>
+                <div class="col-md-3 text-center mb-3">
+                    <img src="resimler/dilemma.png">
+                </div>
+                <div class="col-lg-3 text-center">
+                    <a href="https://www.youtube.com/watch?v=iiDdTX16dNM" target="_blank" class="btn btn-warning text-dark p-3">
+                        <i class="far fa-play-circle"></i>
+                        <span>Videoyu İzle</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row border-bottom py-5 border-dark videos-text">
+                <div class="col-md-3 text-center font-weight-bolder font-italic mb-3">
+                    Furkan Aysal & Emre Seçkin & Efrad & Basa
+                </div>
+                <div class="col-md-3 text-center font-italic mb-3">
+                    Kabus (Lirik Video)
+                </div>
+                <div class="col-md-3 text-center mb-3">
+                    <img src="resimler/casus.png">
+                </div>
+                <div class="col-lg-3 text-center">
+                    <a href="https://www.youtube.com/watch?v=CWkWhfRNiZU" target="_blank" class="btn btn-warning text-dark p-3">
+                        <i class="far fa-play-circle"></i>
+                        <span>Videoyu İzle</span>
+                    </a>
+                </div>
+            </div>
+
 
         </div>
     </section>
